--- a/src/Components/Css/Container.css
+++ b/src/Components/Css/Container.css
@@ -1,23 +1,16 @@
-/* Container styles */
 .container {
-  width: 90%;
+  width: 100%;
   border-radius: 25px;
   overflow: hidden;
   margin: 50px auto 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: #f6f6f6;
-  margin-left: 50px;
-  margin-right: 50px;
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
-  gap: 40px;
-  height: 700px;
+  justify-content: center;
 }
 
-/* Image styles */
 .container img {
-  width: 25%;
   border-radius: 25px;
+  margin: 20px;
 }
