--- a/src/Components/Css/Header.css
+++ b/src/Components/Css/Header.css
@@ -1,22 +1,22 @@
 .header {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
+  padding: 10px;
   color: #fff;
-  margin-left: 50px;
-  margin-right: 50px;
-  width: 90%;
+  width: 100%;
 }
-.nav ul {
-  list-style: none;
-  padding: 0;
+
+.nav-list {
   display: flex;
   flex-direction: row;
-  align-items: center;
 }
-.nav li {
-  margin-left: 30px;
+
+.nav-item {
+  margin-right: 20px;
 }
-.nav a {
+
+.link {
+  text-decoration: none;
   color: red;
 }
