--- a/src/Data/Data-css/About.css
+++ b/src/Data/Data-css/About.css
@@ -2,23 +2,35 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
-  margin-top: 30px;
   width: 100%;
+  gap: 50px;
+  margin-top: 100px;
+  margin-bottom: 150px;
+}
+
+.menu-item {
+  display: flex;
+  flex-direction: column;
 }
 
 .menu-button {
   border-radius: 5px;
   background: var(--Red, #ff6060);
   cursor: pointer;
-  padding-right: 800px;
   padding-left: 10px;
   padding-top: 5px;
+  padding-bottom: 5px;
   color: white;
   font-weight: bold;
-  width: 100%;
+  padding-right: 800px;
 }
 
 .menu-button:hover {
   background: var(--RedHover, #ff5050);
+}
+
+.menu-container p {
+  overflow-wrap: break-word; /* Permet au texte de se couper et d'aller à la ligne en cas de besoin */
+  max-width: 800px;
+  padding-left: 20px;
 }
