--- a/src/Components/Css/Bande.css
+++ b/src/Components/Css/Bande.css
@@ -6,6 +6,9 @@
   overflow: hidden;
   margin: 50px auto 0;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .bande-image {
