--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,4 +1,3 @@
-/* Bande.css */
 .bande {
   width: 100%;
   height: 230px;
@@ -15,4 +14,15 @@
   width: 100%;
   height: auto;
   object-fit: cover;
+  filter: brightness(
+    80%
+  ); /* Réduit la luminosité de l'image (60%) pour la rendre plus sombre */
+}
+
+.bande p {
+  font-size: 48px;
+  font-family: Montserrat;
+  font-weight: bold;
+  color: white;
+  position: absolute;
 }
