--- a/src/pages/StayDetails/StayDetails.css
+++ b/src/pages/StayDetails/StayDetails.css
@@ -7,24 +7,86 @@
   background-color: #f6f6f6;
   border-radius: 25px;
 }
-
-.menu-buttons-container {
+.menu-buttons-flex {
   display: flex;
   flex-direction: row;
+  width: 1280px;
   justify-content: space-between;
   margin-top: 50px;
 }
+.title {
+  color: #ff6060;
+  font-family: Montserrat;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 500;
+}
+.description {
+  max-width: 350px;
+}
+.equipments {
+  display: flex;
+  flex-direction: column;
+  max-width: 350px;
+}
+.title-and-host {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+}
 
-.menu-button-Nav {
-  background-color: #ff6060;
-  color: #fff;
+.title {
+  color: #ff6060;
+  font-family: Montserrat;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 500;
+  margin-right: 10px;
+}
+
+.host-name {
+  font-size: 18px;
+  color: #ff6060;
+  width: 60px;
+  margin-right: 30px;
+}
+
+.host-image {
+  max-width: 80px;
+  height: auto;
+  border-radius: 50%;
+}
+.host-and-picture {
+  display: flex;
+  flex-direction: row;
+}
+.location {
+  color: #ff6060;
   font-family: Montserrat;
   font-size: 18px;
   font-style: normal;
-  font-weight: 500;
-  padding: 10px 20px;
-  cursor: pointer;
-  transition: background-color 0.3s ease-in-out;
-  padding-right: 500px;
-  border-radius: 5px;
+  margin: 0;
+}
+.location-rating {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.rating {
+  font-size: 24px; /* La taille des étoiles */
+}
+.tags {
+  margin-top: 20px;
+}
+.tag {
+  margin-right: 10px;
+  background-color: #ff6060;
+  border-radius: 10px;
+  padding: 5px 10px 5px 10px;
+  color: #fff;
+  text-align: center;
+  font-family: Montserrat;
+  font-size: 20px;
+  font-style: normal;
 }
