--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,5 +1,4 @@
-.bande {
-  width: 100%;
+.banner {
   height: 230px;
   border-radius: 25px;
   overflow: hidden;
@@ -10,19 +9,32 @@
   justify-content: center;
 }
 
-.bande-image {
+.banner-picture {
   width: 100%;
   height: auto;
   object-fit: cover;
-  filter: brightness(
-    80%
-  ); /* Réduit la luminosité de l'image (60%) pour la rendre plus sombre */
+  filter: brightness(80%);
 }
 
-.bande p {
+.banner p {
   font-size: 48px;
   font-family: Montserrat;
   font-weight: bold;
   color: white;
   position: absolute;
+}
+
+@media screen and (max-width: 500px) {
+  .banner {
+    width: 95%;
+    height: 100px;
+    border-radius: 10px;
+  }
+  .banner p {
+    font-size: 25px;
+    font-family: Montserrat;
+    font-weight: bold;
+    color: white;
+    position: absolute;
+  }
 }
