--- a/src/components/Collapse/Collapse.css
+++ b/src/components/Collapse/Collapse.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 450px;
+  width: 800px;
   cursor: pointer;
   background-color: #ff6060;
   padding: 10px 20px 10px 15px;
@@ -14,7 +14,7 @@
 
 .menu-container p {
   overflow-wrap: break-word;
-  max-width: 400px;
+  max-width: 750px;
   padding-left: 20px;
   color: #ff6060;
   font-size: 20px;
@@ -26,11 +26,26 @@
 
 .description-container {
   background-color: #f2f2f2;
-  padding: 10px;
   border-radius: 5px;
-  display: none;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 1s;
 }
 
-.description-container.open {
-  display: block;
+.menu-button.open + .description-container {
+  max-height: 500px;
+}
+
+.menu-button div:nth-child(2) {
+  transition: transform 0.8s ease;
+}
+
+.menu-button.open div:nth-child(2) {
+  transform: rotate(180deg);
+}
+
+@media screen and (max-width: 500px) {
+  .menu-button {
+    width: 90%;
+  }
 }
