--- a/src/pages/StayDetails/StayDetails.css
+++ b/src/pages/StayDetails/StayDetails.css
@@ -1,39 +1,24 @@
 .image-gallery {
-  width: 100%;
-  height: 415px;
+  max-width: 100%;
+  height: 600px;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #f6f6f6;
   border-radius: 25px;
 }
+
+.description-picture {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .menu-buttons-flex {
   display: flex;
   flex-direction: row;
-  width: 1280px;
   justify-content: space-between;
   margin-top: 50px;
-}
-.title {
-  color: #ff6060;
-  font-family: Montserrat;
-  font-size: 36px;
-  font-style: normal;
-  font-weight: 500;
-}
-.description {
-  max-width: 350px;
-}
-.equipments {
-  display: flex;
-  flex-direction: column;
-  max-width: 350px;
-}
-.title-and-host {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
 }
 
 .title {
@@ -42,25 +27,46 @@
   font-size: 36px;
   font-style: normal;
   font-weight: 500;
-  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
+.description,
+.equipments-list {
+  max-width: 350px;
+  color: #ff6060;
+  font-family: Montserrat;
+  font-size: 24px;
+  font-style: normal;
+  margin: 0;
+  padding: 20px;
+  list-style-type: none;
+}
+
+.picture-name {
+  display: flex;
+  flex-direction: row;
 }
 
 .host-name {
   font-size: 18px;
   color: #ff6060;
   width: 60px;
-  margin-right: 30px;
+  margin-right: 10px;
+}
+
+.Picture-rating {
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
 }
 
 .host-image {
   max-width: 80px;
   height: auto;
   border-radius: 50%;
+  margin-left: 10px;
 }
-.host-and-picture {
-  display: flex;
-  flex-direction: row;
-}
+
 .location {
   color: #ff6060;
   font-family: Montserrat;
@@ -68,17 +74,21 @@
   font-style: normal;
   margin: 0;
 }
+
 .location-rating {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
+
 .rating {
-  font-size: 24px; /* La taille des étoiles */
+  font-size: 24px;
 }
+
 .tags {
   margin-top: 20px;
 }
+
 .tag {
   margin-right: 10px;
   background-color: #ff6060;
@@ -89,4 +99,43 @@
   font-family: Montserrat;
   font-size: 20px;
   font-style: normal;
+}
+
+@media screen and (max-width: 500px) {
+  .image-gallery {
+    max-width: 100%;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f6f6f6;
+    border-radius: 25px;
+  }
+
+  .description-picture {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .Picture-rating {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    margin-top: 50px;
+  }
+
+  .menu-buttons {
+    margin-top: 20px;
+  }
+
+  .menu-buttons-flex {
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+  }
+
+  .collapse-button {
+    margin-top: 20px;
+  }
 }
