Changement CSS en SASS

--- a/src/pages/NotFound/NotFound.scss
+++ b/src/pages/NotFound/NotFound.scss
@@ -24,6 +24,6 @@
     font-weight: 500;
     line-height: 142.6%;
     text-decoration-line: underline;
-    display: flex
+    display: flex;
     justify-content: center;
   }
