--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,4 +1,5 @@
 .banner {
+  position: relative;
   height: 230px;
   border-radius: 25px;
   overflow: hidden;
@@ -27,12 +28,16 @@
     width: 100%;
     height: 150px;
     border-radius: 10px;
+
     p {
       font-size: 25px;
       font-family: Montserrat;
       font-weight: bold;
       color: white;
       position: absolute;
+      width: 80%;
+      text-align: center;
+      
     }
   }
 }
