--- a/src/components/Stays/Stays.scss
+++ b/src/components/Stays/Stays.scss
@@ -7,52 +7,59 @@
   gap: 30px;
   padding: 30px;
   margin-top: 30px;
+ 
+ 
 
-  .image {
-    margin: 30px;
-    border-radius: 25px;
+  .veil{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.00) 0%, rgba(0, 0, 0, 0.50) 100%);
+    //z-index: 1000;
+  }
+  .stay-container {
+    //margin: 30px;
+    border-radius: 10px;
     overflow: hidden;
     position: relative;
-    display: inline-block;
-    height: 400px;
-    width: 100%;
-    max-width: 400px;
+    // display: inline-block;
+    height: 340px;
+    width: 30%;
+    // max-width: 400px;
 
     .thumbnail {
-      width: 100%;
-      height: 500px;
       object-fit: cover;
+      width: 100%;
+      height: 100%;
     }
 
     .image-title {
       position: absolute;
-      top: 300px;
       color: white;
       font-family: Montserrat;
-      font-size: 25px;
+      font-size: 18px;
       font-style: normal;
       font-weight: 500;
-      background: linear-gradient(
-        to bottom,
-        rgba(0, 0, 0.1, 0.5),
-        rgba(1, 1, 1, 1)
-      );
-      height: 100%;
-      width: 97%;
-      padding-left: 10px;
+      bottom: 20px;
+      left: 20px;
+      right: 20px;
+      z-index: 1;
+      height: 30px;
+      
     }
+   
   }
 
+  
   @media screen and (max-width: 1110px) {
     background-color: white;
     padding: 0;
     width: 100%;
 
-    .image {
+    .stay-container {
       width: 100%;
-      height: 400px;
       margin: 0;
-      max-width: 650px;
+      
     }
   }
 }
