--- a/src/pages/StayDetails/StayDetails.scss
+++ b/src/pages/StayDetails/StayDetails.scss
@@ -1,3 +1,6 @@
+@import '../styles/style.scss';
+
+
 .image-gallery {
   max-width: 100%;
   height: 600px;
@@ -14,39 +17,37 @@
 }
 
 .description-picture {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  @include flexbox-styles;
 
+
+  @media screen and (max-width: 800px) {
+    display: flex;
+    flex-direction: column;
+  }
   .title-and-host {
-    color: #ff6060;
-    font-family: Montserrat;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 500;
+    @include custom-text-style;
     margin-bottom: 10px;
 
     .location {
-      color: #ff6060;
-      font-family: Montserrat;
-      font-size: 18px;
+      @include custom-text-style;
       font-style: normal;
       margin: 0;
     }
 
     .tags {
-      margin-top: 20px;
+      
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
 
       .tag {
+        @include custom-styles;
         margin-right: 10px;
-        background-color: #ff6060;
         border-radius: 10px;
         padding: 5px 10px 5px 10px;
-        color: #fff;
-        text-align: center;
-        font-family: Montserrat;
         font-size: 20px;
-        font-style: normal;
+        margin-top: 10px;
+        
       }
     }
   }
@@ -60,12 +61,12 @@
       justify-content: space-between;
     }
     .picture-name {
-      display: flex;
-      flex-direction: row;
+      @include flex-row;
+
 
       .host-name {
+        @include custom-text-style;
         font-size: 18px;
-        color: #ff6060;
         width: 60px;
         margin-right: 10px;
       }
@@ -78,22 +79,28 @@
       }
     }
     .location-rating {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-    }
+      @include flexbox-styles;
 
-    .rating {
-      font-size: 24px;
-      margin-left: 20px;
+    }
+    .rating{
+    margin-left: 50px;
+
+    @media screen and (max-width: 800px) {
+    margin-left: 0px;
+    }
+    }
+  
+    .Star {
+      width: 24px;
+      height: 24px; 
+     
     }
   }
 }
 
 .menu-buttons-flex {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+
+  @include flexbox-styles;
   margin-top: 50px;
 
   @media screen and (max-width: 800px) {
@@ -105,16 +112,16 @@
 
     @media screen and (max-width: 800px) {
       margin-top: 20px;
+      width: 100%;
     }
     .description,
     .equipments-list {
-      color: #ff6060;
-      font-family: Montserrat;
+      @include custom-text-style;
       font-size: 24px;
-      font-style: normal;
       margin: 0;
       padding: 20px;
       list-style-type: none;
     }
   }
+  
 }
