--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;1,300&display=swap");
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 .App {
   text-align: center;
   .App-logo {
@@ -35,6 +40,7 @@
 .main-container {
   margin-left: 50px;
   margin-right: 50px;
+  min-height: calc(100vh - 228px);
 }
 
 @keyframes App-logo-spin {
